--- a/calculadora.css
+++ b/calculadora.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  background-image: linear-gradient(to left, magenta, tomato);
+  background-image: linear-gradient(to left, rgb(0, 254, 25), rgb(114, 211, 95));
   margin: 0;
   min-height: 100vh;
   display: flex;
