2025/03/5_CAMBIOS_IMAGENES_VENTA_ENTRADAS

--- a/venta-entradas.css
+++ b/venta-entradas.css
@@ -2,8 +2,12 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin: 50px;
+    background-color: rgb(109, 187, 109);
 }
-
+h1 {
+    color: red;
+    
+}
 .container {
     max-width: 400px;
     margin: auto;
